--- a/main.css
+++ b/main.css
@@ -227,7 +227,7 @@ p, span, li {
   left: 0;
   top: 0;
   font-weight: 100;
-  font-size: 40px;
+  font-size: 36px;
   background-color: #D227E1;
   color: #fff;
   opacity: 0.7;
@@ -321,14 +321,14 @@ p, span, li {
 .contact-heading {
   position: absolute;
   margin: 0;
-  padding-left: 0px;
+  padding-left: 8px;
   padding-right: 32px;
   padding-bottom: 6px;
-  padding-top: 2px;
+  padding-top: 6px;
   right: 0;
   top: 0;
   font-weight: 100;
-  font-size: 32px;
+  font-size: 28px;
   background-color: #D227E1;
   color: #fff;
   opacity: 0.7;
@@ -338,7 +338,7 @@ p, span, li {
   border: 2px solid #D227E1;
   color: #D227E1;
   background-color: #fff;
-  width: 220px;
+  width: 240px;
   height: 50px;
   position: absolute;
   left: 0;
@@ -397,4 +397,10 @@ p, span, li {
 
 .counter-container a:first-child  {
   visibility: hidden;
+}
+
+@media (max-width: 990px) {
+  .navbar-dark .navbar-nav {
+    width: auto;
+  }
 }
