--- a/main.css
+++ b/main.css
@@ -3,7 +3,8 @@
   padding-bottom: 0;
   font-family: 'Lato', sans-serif;
   font-size: 15px;
-  background: url(images/background.png) no-repeat center center;
+  background-color: #fafafa;
+  /* background: url(images/background.png) no-repeat center center; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -68,7 +69,7 @@ p, span, li {
 }
 
 .navbar-dark .navbar-nav {
-  width: 35%;
+  /* width: 35%; */
   justify-content: flex-end;
 }
 
@@ -103,6 +104,13 @@ p, span, li {
   font-size: 18px;
 }
 
+@media (max-width: 768px) {
+  .nav-link {
+    font-weight: 300;
+    font-size: 16px;
+  }
+}
+
 .site-title {
   color: #fff;
   font-weight: 100;
@@ -127,10 +135,10 @@ p, span, li {
 
 @media (max-width: 768px) {
   .site-title {
-    font-size: 24px;
-    top: 32px;
+    font-size: 20px;
+    top: 42px;
     margin-right: 16px;
-    line-height: 12px;
+    line-height: 0;
   }
 
   .site-title .site-title-line {
@@ -162,8 +170,8 @@ p, span, li {
     background-color: #111010;
     padding: 8px;
     padding-left: 16px;
-    width: 136px;
-    height: 200px;
+    width: 100px;
+    height: 182px;
     overflow: auto;
   }
 }
@@ -321,17 +329,22 @@ p, span, li {
 .contact-heading {
   position: absolute;
   margin: 0;
-  padding-left: 8px;
+  padding-left: 14px;
   padding-right: 32px;
-  padding-bottom: 6px;
-  padding-top: 6px;
+  padding-bottom: 10px;
+  padding-top: 10px;
   right: 0;
   top: 0;
   font-weight: 100;
-  font-size: 28px;
+  font-size: 24px;
   background-color: #D227E1;
   color: #fff;
-  opacity: 0.7;
+}
+
+#contact .link {
+  font-size: 16px;
+  top: 2px;
+  position: relative;
 }
 
 .button-link {
