--- a/main.css
+++ b/main.css
@@ -220,9 +220,12 @@ p, span, li {
 }
 
 .site-footer {
-  height: 80px;
+  height: 70px;
   text-align: right;
   position: relative;
+  -webkit-box-shadow: 0px 6px 12px 10px rgba(0,0,0,0.1);
+  box-shadow: 0px 6px 12px 10px rgba(0,0,0,0.1);
+  z-index: 3;
 }
 
 .site-footer-copyright {
@@ -263,13 +266,12 @@ p, span, li {
   padding-left: 32px;
   padding-right: 16px;
   padding-bottom: 2px;
-  padding-top: 2px;
+  padding-top: 20px;
   left: 0;
   top: 0;
   font-weight: 100;
   font-size: 28px;
-  background-color: #D227E1;
-  color: #fff;
+  color: #111;
   opacity: 0.7;
 }
 
@@ -278,7 +280,7 @@ p, span, li {
     padding-left: 32px;
     padding-right: 16px;
     padding-bottom: 2px;
-    padding-top: 2px;
+    padding-top: 20px;
     left: 0;
     top: 0;
     font-weight: 100;
@@ -291,7 +293,7 @@ p, span, li {
     padding-left: 32px;
     padding-right: 16px;
     padding-bottom: 2px;
-    padding-top: 2px;
+    padding-top: 20px;
     left: 0;
     top: 0;
     font-weight: 100;
@@ -384,14 +386,14 @@ p, span, li {
   border: 2px solid #D227E1;
   color: #D227E1;
   background-color: #fff;
-  width: 240px;
+  width: 260px;
   height: 50px;
   position: absolute;
   left: 0;
   right: 0;
   margin: 0 auto;
   bottom: 40px;
-  font-weight: bold;
+  font-weight: 500;
   text-decoration: none;
   text-align: center;
   padding: 12px 26px 12px 12px;
