--- a/main.css
+++ b/main.css
@@ -190,6 +190,22 @@ p, span, li {
   border: 1px solid #D227E1;
 }
 
+.navbar-light .navbar-toggler {
+  border-radius: 0;
+  border: 1px solid #fff;
+  top: 12px;
+  position: absolute;
+  right: 24px;
+}
+
+.navbar-light .navbar-toggler:focus {
+  box-shadow: none;
+  border: none;
+  top: 12px;
+  position: absolute;
+  right: 24px;
+}
+
 .navbar-collapse {
   position: relative;
   z-index: 2;
@@ -197,14 +213,15 @@ p, span, li {
 
 @media (max-width: 768px) {
   .navbar-collapse.show {
-    position: absolute;
-    top: 100px;
-    background-color: #111010;
+    position: fixed;
+    top: 60px;
+    background-color: #fefefe;
     padding: 8px;
-    padding-left: 16px;
-    width: 120px;
-    height: 182px;
+    width: 100%;
+    height: 100%;
     overflow: auto;
+    right: 0;
+    text-align: center;
   }
 }
 
